<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <Switch
        android:id="@+id/Relay1_Switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/relay1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Relay1_Period"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:baselineAligned="false"
                android:text="@string/period" />

            <TextView
                android:id="@+id/Relay1_Phase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/phase" />

            <TextView
                android:id="@+id/Relay1_Duty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/duty" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/Relay1_Period_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:singleLine="true"
                android:text="@string/Null" />

            <EditText
                android:id="@+id/Relay1_Phase_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:singleLine="true"
                android:text="@string/Null" />

            <EditText
                android:id="@+id/Relay1_Duty_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:singleLine="true"
                android:text="@string/Null" />
        </LinearLayout>
    </LinearLayout>

    <Switch
        android:id="@+id/Relay2_Switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/relay2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Relay2_Period"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:baselineAligned="false"
                android:text="@string/period" />

            <TextView
                android:id="@+id/Relay2_Phase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/phase" />

            <TextView
                android:id="@+id/Relay2_Duty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/duty" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/Relay2_Period_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:singleLine="true"
                android:text="@string/Null" />

            <EditText
                android:id="@+id/Relay2_Phase_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:singleLine="true"
                android:text="@string/Null" />

            <EditText
                android:id="@+id/Relay2_Duty_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:singleLine="true"
                android:text="@string/Null" />
        </LinearLayout>
    </LinearLayout>

    <Switch
        android:id="@+id/Relay3_Switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/relay3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Relay3_Period"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:baselineAligned="false"
                android:text="@string/period" />

            <TextView
                android:id="@+id/Relay3_Phase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/phase" />

            <TextView
                android:id="@+id/Relay3_Duty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/duty" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/Relay3_Period_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:singleLine="true"
                android:text="@string/Null" />

            <EditText
                android:id="@+id/Relay3_Phase_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:singleLine="true"
                android:text="@string/Null" />

            <EditText
                android:id="@+id/Relay3_Duty_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:singleLine="true"
                android:text="@string/Null" />
        </LinearLayout>
    </LinearLayout>
    <Switch
        android:id="@+id/Relay4_Switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/relay4" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Relay4_Period"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:baselineAligned="false"
                android:text="@string/period" />

            <TextView
                android:id="@+id/Relay4_Phase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/phase" />

            <TextView
                android:id="@+id/Relay4_Duty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/duty" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/Relay4_Period_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:singleLine="true"
                android:text="@string/Null" />

            <EditText
                android:id="@+id/Relay4_Phase_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:singleLine="true"
                android:text="@string/Null" />

            <EditText
                android:id="@+id/Relay4_Duty_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:singleLine="true"
                android:text="@string/Null" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/send_data_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set" />

</LinearLayout>
